<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Trip Diary</string>
	<string name="start_new_trip">+ Start New Trip</string>
	<string name="settings_title">Trip Diary > Trip Settings</string>
	<string name="settings_created_label">Created:</string>
	<string name="settings_last_updated_label">Updated:</string>
	<string name="settings_name_label">Name*</string>
	<string name="settings_name_hint">Provide a trip name here (required)</string>
	<string name="settings_description_label">Description</string>
	<string name="settings_description_hint">Provide a trip description here e.g. "Trip to Hawaii!" (optional)</string>
	<string name="trip_settings_ok">OK</string>
	<string name="menu_add_photo">Add Photo</string>
	<string name="menu_add_video">Add Video</string>
	<string name="menu_add_audio">Add Audio</string>
	<string name="menu_add_text">Add Text</string>
	<string name="menu_delete_trip">Delete Trip</string>
	<string name="menu_trip_settings">Trip Settings</string>
	<string name="menu_share_trip">Export Trip</string>
	<string name="menu_resume_trip">Resume Trip</string>
	<string name="menu_stop_trip">Stop Trip</string>
    <string name="trace_route">Trace route for this trip (save tracks)</string>
	<string name="trip_audio">Audio recording</string>
	<string name="audio_start">Start Audio Recording</string>
	<string name="audio_stop">Stop Audio Recording</string>
	<string name="trip_note">Note</string>  
	<string name="trip_share">Export trip</string>
	<string name="menu_view_entry">View</string>
	<string name="menu_remove_entry">Remove</string>
	<string name="show_details_entry">Details</string>
    <string name="trip_info">Info</string>
    <string name="home_settings">Settings</string>
	<string name="home_info">Info</string>
	<string name="home_issues">Questions</string>
	<string name="home_exit">Exit</string>
	<string name="home_preference">Preferences</string>

</resources>
