<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">
			<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
				<LinearLayout android:layout_width="160dp"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:id="@+id/tvCreatedLbl" android:text="@string/settings_created_label"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:gravity="left" android:paddingLeft="5dp"
						android:paddingRight="5dp"/>
					<TextView android:id="@+id/tvCreated" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout android:layout_width="fill_parent" android:gravity="right" android:layout_gravity="right"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:id="@+id/tvLastUpdatedLbl" android:text="@string/settings_last_updated_label"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right" android:gravity="right"
						android:paddingRight="5dp"/>
					<TextView android:id="@+id/tvLastUpdated"
						android:layout_gravity="right" android:gravity="right" android:paddingRight="5dp"
						android:layout_width="wrap_content" android:layout_height="wrap_content"/>
				</LinearLayout>
			</LinearLayout>
			<ImageView android:id="@+id/settingsTripImage"
				android:layout_width="fill_parent" android:layout_height="160dip"
				android:padding="4dip" android:scaleType="fitCenter" android:src="@drawable/image_pick"/>
			<TextView android:id="@+id/tvSettingsTripImage"
				android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone"/>
			<TextView android:text="@string/settings_name_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			<EditText android:id="@+id/edName" android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			<TextView android:text="@string/settings_description_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			<EditText android:id="@+id/edDescription"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:lines="5" android:gravity="top"/>
			<CheckBox android:id="@+id/cbTraceRoute" android:text="@string/trace_route" 
				android:layout_width="fill_parent" android:layout_height="wrap_content"/>
			<Button android:text="@string/trip_settings_ok" android:id="@+id/btnOk"
				android:layout_width="fill_parent" android:layout_height="wrap_content"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
